crates/oxc_css_parser/tests/recoverable/scss/wrong-indent-level.sass.error.snap
---
source: crates/oxc_css_parser/tests/recoverable.rs
---
error: declaration at top level is disallowed
  ┌─ wrong-indent-level.sass:3:2
  │
3 │  d: e
  │  ^^^^
